I did a variant to align the radio buttons in a jumbotron whit the rest of the call to action content. Also tried some font color color contrast, a different background image and a fixed top navbar

--- a/assets/css/untitled.css
+++ b/assets/css/untitled.css
@@ -1,10 +1,16 @@
 .section-e-benefict {
   background-color: rgba(59, 85, 120, 1) !important;
   color: #ffffff;
+  letter-spacing: 2px;
 }
 
-.section-e-features {
+.section-color {
   color: rgba(59, 85, 120, 1);
+}
+
+.section-custom-text {
+  letter-spacing: 2px;
+  font-weight: 400;
 }
 .cta {
   display: flex;
